# c346-fa23-project-mentats

./: .gitignore  AUTHORS  LICENCE  README.md
.github/workflows/: node.js.yml
doc/: ClassUML  architecture.md  designpatterns.md  dev-setup.md  minutes.md  organization.md  projectreflections.md  proposal.md  sprint0.md  sprint1.md  sprint2.md  sprint3.md  sprint4.md  sprint5.md  testing.md
src/statego-backend/: Cargo.toml  pom.xml  settings.gradle
src/statego-backend/src/: config.rs  main.rs  models.rs  persistence.rs  queries.rs  routes.rs  test.rs
src/statego-backend/src/main/java/com/Mentats/Controller/: SessionController.java
src/statego-backend/src/main/java/com/Mentats/Controllers/: UserController.java
src/statego-backend/src/main/java/com/Mentats/Entities/: Entities.java  Session.java  User.java
src/statego-backend/src/main/java/com/Mentats/Repositories/: SessionRepository.java  UserRepository.java
src/statego-backend/src/main/java/com/Mentats/Statego/: StategoApplication.java
src/statego-backend/src/models/: campaign.rs  game.rs  session.rs  user.rs
src/statego-backend/src/persistence/: campaign.rs  error.rs  game.rs  mod.rs  session.rs  tools.rs  user.rs
src/statego-backend/src/queries/: campaign.rs  game.rs  session.rs  user.rs
src/statego-backend/src/routes/: campaign.rs  game.rs  mod.rs  session.rs  user.rs
src/statego-frontend/: .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.js  (+1 more)
statego-backend/: build.gradle  pom.xml
statego-frontend/: .prettierrc.json  package-lock.json  package.json
(+28 files in other folders)
